# Animate

./: .gitignore  Cargo.toml  readme.md
engine/: Cargo.toml
engine/src/: event_loop.rs  input.rs  lib.rs  renderer.rs  shader.rs  state.rs  text.rs  texture.rs  utility.rs  vertex.rs
engine/src/shaders/: shader.wgsl
